1.18-4.0.19:
- Fix patchouli manual

1.18-4.0.18:
- Fixed the tank updating when the contents changed

1.18-4.0.17:
- The dialing device is infusable again
- Fixed the counter module to work again (fix partially done by joelra)

1.18-4.0.16:
- Fixed the blindness module recipe
- Added protection for division by zero in the spawner of the gui
- Small improvement on inputting min height for the environmental controller

1.18-4.0.15:
- Fixed missing recipe for the destination analyzer

1.18-4.0.14:
- Fixed larger screens not refreshing correctly when the chunk got unloaded

1.18-4.0.13:
- Implemented a way for the redstone transmitter and receiver to reset the channel (through the GUI)

1.18-4.0.12:
- Fixed the rendering of the environmental controller buffs
- The screen controller is now infusable again
- The crafter is now infusable again
- Fixed some mod interaction with screens

1.18-4.0.11:
- Port to 1.18.2

1.18-4.0.10:
- Added protection for something that should not be possible in the digit renderer

1.18-4.0.9:
- Fixed a crash bug in the environmental controller when used with mobs and a module that gives a potion effect

1.18-4.0.8:
- The Destination Analyzer will now check for low dimension power again (RFTools Dimensions) for both the 'check' button in the dialer as well as the color of the matter transmitter beam

1.18-4.0.7:
- Fixed a rendering issue with the ghost items in the crafter. They were not faded
- Fixed a bug when remembering items in the crafter. This would also lock some of the player inventory slots
- Fixed a bug in the crafter where manually inputting a recipe (as opposed to letting it be done by JEI) didn't work properly

1.18-4.0.6:
- Fixed a crash in the digit block

1.18-4.0.5:
- Fixed a problem with items not getting restored when breaking and placing blocks

1.18-4.0.4:
- Fixed a bad capability in RFToolsUtility

1.18-4.0.3: