@@ -1,3 +1,6 @@
+Upcoming:
+- Greatly improved the input of the environmental controller. It was very hard to type negative numbers
+
 1.18-4.0.19:
 - Fix patchouli manual
 
